force-app/main/default/objects/Trolley_Paypal_Batch__c/Trolley_Paypal_Batch__c.object-meta.xml
<CustomObject>
    <label>Paypal Batch</label>
    <nameField>
        <label>Payout Batch ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paypal Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>