force-app/main/default/objects/Trolley_Paypal_Batch__c/fields/paypal_webhook_at__c.field-meta.xml
<CustomField>
    <fullName>paypal_webhook_at__c</fullName>
    <label>Paypal Webhook At</label>
    <type>DateTime</type>
</CustomField>