force-app/main/default/objects/Trolley_Paypal_Batch__c/fields/Process_in_QB__c.field-meta.xml
<CustomField>
    <fullName>Process_in_QB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process in QB</label>
    <type>Checkbox</type>
</CustomField>