force-app/main/default/objects/Trolley_Paypal_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Fee__c</columns>
    <columns>Payments__c</columns>
    <columns>paypal_webhook_at__c</columns>
    <columns>Status__c</columns>
    <columns>Process_in_QB__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>